<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.skylights.represent.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/appname"
        style="@style/AppName"
        android:gravity="center"
        android:layout_marginTop="45dp"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/tagline"
        style="@style/Tagline"
        android:layout_below="@id/appname"
        android:gravity="center"
        android:text="@string/tagline" />

    <TextView
        android:id="@+id/getstarted"
        style="@style/GetStarted"
        android:layout_below="@id/tagline"
        android:gravity="center"
        android:text="@string/get_started" />

    <TextView
        android:id="@+id/findrepstext"
        style="@style/FindRepsText"
        android:layout_below="@id/getstarted"
        android:gravity="center"
        android:text="@string/find_reps_text" />

    <EditText
        android:id="@+id/enterzip"
        android:layout_width="200dp"
        android:textSize="16sp"
        android:inputType="number"
        android:layout_height="wrap_content"
        android:layout_below="@id/findrepstext"
        android:hint="@string/enter_zip"
        android:textColor="?attr/colorPrimary"
        android:paddingTop="10dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="25dp"
        android:fontFamily="sans-serif-light"
        android:paddingBottom="20dp" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/button_send"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/findrepstext"
        android:layout_toRightOf="@+id/enterzip"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="25dp"
        android:text="@string/button_search"
        android:onClick="searchZip" />

    <View
        android:id="@+id/linedivider"
        android:layout_width="150dp"
        android:layout_height="1dip"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_below="@id/enterzip"
        android:background="#D7D7D7" />

    <TextView
        android:id="@+id/or"
        style="@style/OrText"
        android:layout_below="@id/enterzip"
        android:layout_toRightOf="@+id/linedivider"
        android:gravity="center"
        android:text="@string/or" />

    <View
        android:layout_width="150dp"
        android:layout_height="1dip"
        android:gravity="center"
        android:layout_below="@id/enterzip"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/or"
        android:background="#D7D7D7" />

    <Button xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/button_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/or"
        android:layout_marginTop="25dp"
        android:text="@string/use_curr"
        android:onClick="useCurrLoc" />

</RelativeLayout>
